# SFunctor

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  AUTHORS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONFIG_DOCUMENTATION.md  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENTS.md  GIT_READY_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_STRUCTURE.md  README.md  README_DISTRIBUTED.md  SFunctor_Demo.ipynb  Structure_Function_2D_slices_old.py  bin_convert_new.py  combine_histograms.py  create_config.py  demo_pipeline.py  extract_2d_slice.py  extract_slice.py  extractor.py  generate_displacements.py  plot_structure_functions.py  pyproject.toml  pytest.ini  quickstart.py  requirements-dev.txt  requirements.txt  run_analysis.py  run_distributed_analysis.sh  run_extract_slice.py  run_extract_slice_no_mpi.py  run_extraction.sh  run_full_pipeline.py  (+22 more)
examples/configs/: beta_study.yaml  default.yaml  profiles.yaml
inputs/: Turb_320_beta100_dedt025_plm.athinput
legacy/: run_sf.py
results/: sf_results_Turb_320_beta100_dedt025_plm_axis1_slice0_file0000.npz  sf_results_Turb_320_beta100_dedt025_plm_axis2_slice0_file0000.npz  sf_results_Turb_320_beta100_dedt025_plm_axis3_slice0_file0000.npz
sfunctor/: __init__.py  cli.py  sf_cli.py  sf_displacements.py  sf_histograms.py  sf_io.py  sf_parallel.py  sf_physics.py
sfunctor/analysis/: __init__.py  batch.py  simple.py  single_slice.py
sfunctor/core/: __init__.py  histograms.py  parallel.py  physics.py
sfunctor/io/: __init__.py  extract.py  slice_io.py
sfunctor/utils/: __init__.py  cli.py  config.py  displacements.py
sfunctor/visualization/: __init__.py  plots.py
slice_data/: simple_sf_slice_x1_0_Turb_320_beta100_dedt025_plm_0000.npz  simple_sf_slice_x3_0_Turb_320_beta100_dedt025_plm_0000.npz
tests/: README.md  __init__.py  run_tests.py  test_config.py  test_sf_displacements.py  test_sf_io.py  test_sf_physics.py
