[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfunctor"
version = "0.1.0"
description = "Frontier Turbulence Structure-Function Analysis - A high-performance Python pipeline for computing anisotropic structure functions from MHD simulations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23",
    "numba>=0.58",
    "matplotlib>=3.8",
    "cmasher>=1.7",
]

[project.optional-dependencies]
mpi = [
    "mpi4py>=3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "flake8-docstrings>=1.6",
    "isort>=5.10",
    "mypy>=0.991",
    "pre-commit>=3.0",
]

[project.scripts]
sfunctor = "sfunctor.cli:main"
sfunctor-extract = "sfunctor.cli:extract_main"

[project.urls]
"Homepage" = "https://github.com/yourusername/sfunctor"
"Bug Tracker" = "https://github.com/yourusername/sfunctor/issues"

[tool.setuptools.packages.find]
include = ["sfunctor*"]
exclude = ["test_env*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/test_env/**", "**/.venv/**"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "test_env/",
    ".venv/",
    "build/",
    "dist/",
] 